PROD_10-24-19/force-app/main/default/objects/Candidates__c/Candidates__c.object-meta.xml
<CustomObject>
    <description>SS: 9/6/2018: created to capture Candidate details for PSG Alt business group.</description>
    <label>Candidates</label>
    <nameField>
        <label>Candidates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>