PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Candidate_Type__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Type__c</fullName>
    <label>Candidate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Sourcer</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Quant Developer</fullName>
            </value>
            <value>
                <fullName>Risk Analyst</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Portfolio Manager</fullName>
                <isActive>false</isActive>
                <label>Portfolio Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>