PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Company1__c.field-meta.xml
<CustomField>
    <fullName>Company1__c</fullName>
    <label>Company1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>