PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>