PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;United States&quot;</defaultValue>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Name</valueSetName>
    </valueSet>
</CustomField>