PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>