PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Founder__c.field-meta.xml
<CustomField>
    <fullName>Founder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Founder</label>
    <type>Checkbox</type>
</CustomField>