PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/GeneralSubStatus__c.field-meta.xml
<CustomField>
    <fullName>GeneralSubStatus__c</fullName>
    <description>SS: 3-27-19 created to track sub-status for general candidates who&#39;s business process is different then other candidates.</description>
    <label>General Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Candidate_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No process</fullName>
            </value>
            <value>
                <fullName>BH Stopped Process</fullName>
            </value>
            <value>
                <fullName>Candidate Stopped Process</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Intro Call</fullName>
            </value>
            <value>
                <fullName>Coffee/Intro Call</fullName>
            </value>
            <value>
                <fullName>Who</fullName>
            </value>
            <value>
                <fullName>Assessments</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Risk Case Studies</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Behavioral</fullName>
            </value>
            <value>
                <fullName>Reference Check</fullName>
            </value>
            <value>
                <fullName>Negotiations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>