PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SS: created to link manager and candidate and career history</description>
    <label>Manager</label>
    <referenceTo>Candidates__c</referenceTo>
    <relationshipLabel>Candidates (Manager)</relationshipLabel>
    <relationshipName>ManagerCandidates</relationshipName>
    <type>Lookup</type>
</CustomField>