PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/PM_Name__c.field-meta.xml
<CustomField>
    <fullName>PM_Name__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; + Portfolio_Manager__r.Id,  Portfolio_Manager__r.First_Name__c + &quot; &quot;+  Portfolio_Manager__r.Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Name</label>
    <type>Text</type>
</CustomField>