PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>will be populated from Career History through process builder: Update Candidate w/Latest CareerHistory</description>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>