PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Strategy1__c.field-meta.xml
<CustomField>
    <fullName>Strategy1__c</fullName>
    <label>Strategy1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arbitrage</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Equity Sector Long/Short</fullName>
            </value>
            <value>
                <fullName>Event Driven</fullName>
            </value>
            <value>
                <fullName>Macro</fullName>
            </value>
            <value>
                <fullName>Quantitative</fullName>
            </value>
            <value>
                <fullName>Equity Regional Long/Short</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>