PROD_10-24-19/force-app/main/default/objects/Candidates__c/fields/Sub_Strategy1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Strategy1__c</fullName>
    <description>PSG Alts Lead Field depend list on Strategy Field</description>
    <label>Sub-Strategy1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Strategy1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>*No sub-strategy</fullName>
            </value>
            <value>
                <fullName>Activist</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Asset Backed</fullName>
            </value>
            <value>
                <fullName>Capital Structure</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Convertible</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>CTA</fullName>
            </value>
            <value>
                <fullName>Currencies</fullName>
            </value>
            <value>
                <fullName>Developed Europe</fullName>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
            <value>
                <fullName>Distressed</fullName>
            </value>
            <value>
                <fullName>Emerging Markets</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Fixed Income</fullName>
            </value>
            <value>
                <fullName>Generalist</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
                <label>HealthCare</label>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Merger Arbitrage</fullName>
            </value>
            <value>
                <fullName>Multi Strategy</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>