PROD_10-24-19/force-app/main/default/objects/Candidates__c/validationRules/Validate_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Phone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(not(isblank(Phone__c)),OR(NOT(REGEX(Phone__c , &quot;\\D*?(\\d\\D*?){10}&quot;)), NOT(ISNUMBER(Phone__c))))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please enter valid phone number</errorMessage>
</ValidationRule>