PROD_10-24-19/force-app/main/default/objects/Candidates__c/listViews/Analyst.listView-meta.xml
<ListView>
    <fullName>Analyst</fullName>
    <columns>NAME</columns>
    <columns>PM_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Candidate_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Candidates__c.Analyst</value>
    </filters>
    <label>Analyst</label>
</ListView>