PROD_10-24-19/force-app/main/default/objects/Candidates__c/listViews/General_Candidates.listView-meta.xml
<ListView>
    <fullName>General_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Candidate_Type__c</columns>
    <columns>Strategy__c</columns>
    <columns>Sub_Strategy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Candidates__c.General_Candidate</value>
    </filters>
    <label>General Candidates</label>
</ListView>